# JSnake

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Food.cpp  Food.h  FoodDrawStrategy.h  Game.cpp  Game.h  Hiscores.cpp  Hiscores.h  Menu.cpp  Menu.h  Options.cpp  Options.h  PlainSnake.cpp  PlainSnake.h  README.md  Snake.cpp  Snake.h  SnakeDrawStrategy.h  SpriteSnake.cpp  SpriteSnake.h  imstb_truetype.h  main.cpp  vcpkg.json
ImGUI/: imgui.cpp  imgui.h  imgui_impl_allegro5.cpp  imgui_internal.h  imgui_widgets.cpp  imstb_textedit.h
cmake/: FindAllegro5.cmake  FindAllegro5_Font.cmake  FindAllegro5_Image.cmake  FindAllegro5_Primitives.cmake  FindAllegro5_TTF.cmake
include/: Food.h  FoodDrawStrategy.h  Game.h  Hiscores.h  Logger.h  Menu.h  Options.h  PlainSnake.h  Snake.h  SnakeDrawStrategy.h  SpriteSnake.h
src/: Food.cpp  Game.cpp  Hiscores.cpp  Logger.cpp  Menu.cpp  Options.cpp  Snake.cpp  SpriteSnake.cpp
